# Protecting-Information

./: .gitignore  CMakeLists.txt  README.md  main.cpp
inc/: Encrypt.h  Operation.h  Signature.h
lib/: CMakeLists.txt
lib/BigInteger/: CMakeLists.txt
lib/BigInteger/inc/: BigInteger.h
lib/BigInteger/src/: BigInteger.cpp
lib/DigitalMoney/: CMakeLists.txt
lib/DigitalMoney/inc/: DigitalMoney.h  md5.h
lib/DigitalMoney/src/: DigitalMoney.cpp
lib/Encryption/: CMakeLists.txt
lib/Encryption/inc/: Encrypt.h  el_gamal.h  rsa.h  shamir.h  vernam.h
lib/Encryption/src/: Encrypt.cpp  el_gamal.cpp  rsa.cpp  shamir.cpp  vernam.cpp
lib/Graph/: CMakeLists.txt
lib/Graph/inc/: Graph.h  Node.h
lib/Graph/src/: Graph.cpp  Node.cpp
lib/MentalPoker/: CMakeLists.txt
lib/MentalPoker/inc/: MentalCard.h  MentalPlayer.h  MetalPoker.h
lib/MentalPoker/src/: MentalPoker.cpp
lib/Operation/: CMakeLists.txt
lib/Operation/inc/: Operation.h
lib/Operation/src/: Operation.cpp
lib/OperationOnFile/: CMakeLists.txt
lib/OperationOnFile/inc/: OperationOnFile.h
lib/Signature/: CMakeLists.txt
lib/Signature/inc/: ElGamal.h  Gost.h  RSA.h  Signature.h
lib/Signature/src/: ElGamal.cpp  Gost.cpp  RSA.cpp  Signature.cpp
lib/ZeroColoring/: CMakeLists.txt
lib/ZeroColoring/inc/: ZeroColoring.h
lib/ZeroColoring/src/: ZeroColoring.cpp
project/: CMakeLists.txt
project/src/: main.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  zero_knowledge_coloring.cpp
src/: Encrypt.cpp  Operation.cpp  OperationOnFile.cpp  Signature.cpp
